--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
+    "nodemailer": "^6.9.16",
     "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.4",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -37,6 +39,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.6"
   }
 }
