--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "react-error-boundary": "^5.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17"
   }
 }
