--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,15 @@
     "express": "^4.21.2",
     "firebase": "^11.1.0",
     "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.10",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.0",
