--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "reset-db": "tsx src/db/reset.ts",
-    "dev": "tsx watch src/index.ts",
+    "reset-db": "ts-node src/db/reset.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -26,6 +26,7 @@
     "@types/node": "^20.17.10",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.3.3"
   }
